[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/quest_editor/ui/QuestWatcher.gd" type="Script" id=1]
[ext_resource path="res://addons/quest_editor/default/fonts/Pangolin-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="QuestWatcher" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxName" type="HBoxContainer" parent="Margin/VBox"]
margin_right = 1014.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="Margin/VBox/HBoxName"]
margin_top = 1.0
margin_right = 150.0
margin_bottom = 21.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
text = "Name"

[node name="Name" type="RichTextLabel" parent="Margin/VBox/HBoxName"]
margin_left = 154.0
margin_right = 1014.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0.678431, 0, 1 )
bbcode_enabled = true

[node name="HBoxDescription" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 26.0
margin_right = 1014.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="Margin/VBox/HBoxDescription"]
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
text = "Description"

[node name="Description" type="RichTextLabel" parent="Margin/VBox/HBoxDescription"]
margin_left = 154.0
margin_right = 1014.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 0.678431, 0, 1 )
bbcode_enabled = true

[node name="HBoxPrecompleted" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 90.0
margin_right = 1014.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="Margin/VBox/HBoxPrecompleted"]
margin_top = 1.0
margin_right = 150.0
margin_bottom = 21.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
text = "Precompleted"

[node name="Precompleted" type="RichTextLabel" parent="Margin/VBox/HBoxPrecompleted"]
margin_left = 154.0
margin_right = 1014.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0.678431, 0, 1 )
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 116.0
margin_right = 1014.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="Margin/VBox/HBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
text = "Tasks"

[node name="VBoxTasks" type="VBoxContainer" parent="Margin/VBox"]
margin_top = 140.0
margin_right = 1014.0
margin_bottom = 140.0
